--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "^4.0.0",
     "@unocss/nuxt": "^65.4.3",
+    "axios": "^1.7.9",
     "nuxt": "^3.15.2",
     "swiper": "^11.2.1",
     "vue": "latest",
