--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "@unocss/nuxt": "^65.4.3",
     "axios": "^1.7.9",
     "nuxt": "^3.15.2",
-    "swiper": "^11.2.1",
     "vue": "latest",
-    "vue-router": "latest",
-    "vue3-carousel-nuxt": "^1.1.5"
+    "vue-router": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
